--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -21,6 +21,10 @@
 #
 last-continuous:
   all:
+  - test_file: jstests/sharding/query/find_and_modify_without_two_phase.js
+    ticket: SERVER-44422
+  - test_file: jstests/sharding/query/delete_without_two_phase.js
+    ticket: SERVER-44422
   - test_file: jstests/core/administrative/check_shard_index.js
     ticket: SERVER-50792
   - test_file: jstests/sharding/refine_collection_shard_key_basic.js
