--- a/buildscripts/resmokeconfig/suites/concurrency_sharded_causal_consistency_and_balancer.yml
+++ b/buildscripts/resmokeconfig/suites/concurrency_sharded_causal_consistency_and_balancer.yml
@@ -147,6 +147,10 @@ executor:
         enableTestCommands: 1
         roleGraphInvalidationIsFatal: 1
         queryAnalysisWriterIntervalSecs: 1
+        # Orphan cleanup happening too quickly can cause intermittent test failures due to
+        # inconsistent secondary reads.
+        orphanCleanupDelaySecs: 10
+        skipDroppingHashedShardKeyIndex: true
     num_rs_nodes_per_shard: 3
     num_shards: 2
     num_mongos: 2
