--- a/buildscripts/resmokeconfig/suites/concurrency_sharded_initial_sync.yml
+++ b/buildscripts/resmokeconfig/suites/concurrency_sharded_initial_sync.yml
@@ -277,6 +277,7 @@ executor:
         collectionClonerBatchSize: 10
         initialSyncOplogFetcherBatchSize: 10
         queryAnalysisWriterIntervalSecs: 1
+        skipDroppingHashedShardKeyIndex: true
     num_rs_nodes_per_shard: 3
     num_shards: 2
     num_mongos: 2
