--- a/buildscripts/resmokeconfig/suites/multi_stmt_txn_jscore_passthrough_with_migration.yml
+++ b/buildscripts/resmokeconfig/suites/multi_stmt_txn_jscore_passthrough_with_migration.yml
@@ -368,5 +368,6 @@ executor:
         numInitialSyncAttempts: 1
         writePeriodicNoops: true
         coordinateCommitReturnImmediatelyAfterPersistingDecision: true
+        skipDroppingHashedShardKeyIndex: true
     num_rs_nodes_per_shard: 2
     num_shards: 2
