--- a/etc/evergreen_nightly.yml
+++ b/etc/evergreen_nightly.yml
@@ -403,3 +403,18 @@ buildvariants:
   stepback: false
   tasks:
   - name: blackduck_scanner
+
+###########################################
+#          Copybara buildvariants           #
+###########################################
+
+- name: &copybara-sync-between-repos copybara-sync-between-repos
+  modules:
+  - enterprise
+  display_name: "* Copybara Sync Between Repos"
+  cron: "0 4 * * *" # From the ${project_nightly_cron} parameter.
+  run_on:
+  - ubuntu2204-small
+  stepback: false
+  tasks:
+  - name: sync_repo_with_copybara
