--- a/etc/evergreen_yml_components/definitions.yml
+++ b/etc/evergreen_yml_components/definitions.yml
@@ -7252,7 +7252,7 @@ tasks:
       shell: bash
       script: |
         set -oe
-        podman login --username ${release_tools_container_registry_username} --password ${release_tools_container_registry_password} ${release_tools_container_registry}
+        echo "${release_tools_container_registry_password}" | podman login --password-stdin --username ${release_tools_container_registry_username} ${release_tools_container_registry}
   - command: subprocess.exec
     params:
       binary: bash
@@ -7328,7 +7328,7 @@ tasks:
       shell: bash
       script: |
         set -oe
-        podman login --username ${release_tools_container_registry_username} --password ${release_tools_container_registry_password} ${release_tools_container_registry}
+        echo "${release_tools_container_registry_password}" | podman login --password-stdin --username ${release_tools_container_registry_username} ${release_tools_container_registry}
 
   # signing windows artifacts
   - command: subprocess.exec
@@ -7869,7 +7869,7 @@ tasks:
       shell: bash
       script: |
         set -oe
-        podman login --username ${release_tools_container_registry_username} --password ${release_tools_container_registry_password} ${release_tools_container_registry}
+        echo "${release_tools_container_registry_password}" | podman login --password-stdin --username ${release_tools_container_registry_username} ${release_tools_container_registry}
   - command: subprocess.exec
     params:
       binary: bash
