--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -264,7 +264,7 @@ last-continuous:
   - test_file: jstests/sharding/resharding_temp_ns_routing_info_unsharded.js
     ticket: SERVER-68628
   - test_file: jstests/sharding/move_chunk_concurrent_cloning.js
-    ticket: SERVER-68648
+    ticket: SERVER-81201
   - test_file: jstests/sharding/move_chunk_interrupt_postimage.js
     ticket: SERVER-68728
   - test_file: jstests/sharding/resharding_critical_section_metrics.js
@@ -417,6 +417,8 @@ last-continuous:
     ticket: SERVER-79446
   - test_file: jstests/sharding/multi_collection_transaction_placement_conflict_workaround.js
     ticket: SERVER-77506
+  - test_file: jstests/sharding/move_chunk_basic.js
+    ticket: SERVER-81201
   suites: null
 last-lts:
   all:
@@ -723,7 +725,7 @@ last-lts:
   - test_file: jstests/sharding/resharding_temp_ns_routing_info_unsharded.js
     ticket: SERVER-68628
   - test_file: jstests/sharding/move_chunk_concurrent_cloning.js
-    ticket: SERVER-68648
+    ticket: SERVER-81201
   - test_file: jstests/sharding/move_chunk_interrupt_postimage.js
     ticket: SERVER-68728
   - test_file: jstests/replsets/tenant_migration_recipient_forget_migration.js
@@ -880,4 +882,6 @@ last-lts:
     ticket: SERVER-79446
   - test_file: jstests/sharding/multi_collection_transaction_placement_conflict_workaround.js
     ticket: SERVER-77506
+  - test_file: jstests/sharding/move_chunk_basic.js
+    ticket: SERVER-81201
   suites: null
