--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -409,6 +409,8 @@ last-continuous:
     ticket: SERVER-66018
   - test_file: jstests/core/timeseries/timeseries_match_pushdown.js
     ticket: SERVER-79585
+  - test_file: jstests/sharding/timeseries_insert_targeting_normalize_metadata.js
+    ticket: SERVER-80203
   suites: null
 last-lts:
   all:
@@ -866,4 +868,6 @@ last-lts:
     ticket: SERVER-66018
   - test_file: jstests/core/timeseries/timeseries_match_pushdown.js
     ticket: SERVER-79585
+  - test_file: jstests/sharding/timeseries_insert_targeting_normalize_metadata.js
+    ticket: SERVER-80203
   suites: null
