--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -413,6 +413,8 @@ last-continuous:
     ticket: SERVER-79585
   - test_file: jstests/sharding/timeseries_insert_targeting_normalize_metadata.js
     ticket: SERVER-80203
+  - test_file: jstests/core/timeseries/timeseries_collection_uuid.js
+    ticket: SERVER-79446
   suites: null
 last-lts:
   all:
@@ -874,4 +876,6 @@ last-lts:
     ticket: SERVER-79585
   - test_file: jstests/sharding/timeseries_insert_targeting_normalize_metadata.js
     ticket: SERVER-80203
+  - test_file: jstests/core/timeseries/timeseries_collection_uuid.js
+    ticket: SERVER-79446
   suites: null
