--- a/etc/evergreen_yml_components/definitions.yml
+++ b/etc/evergreen_yml_components/definitions.yml
@@ -308,6 +308,7 @@ variables:
   - enterprise-amazon2023-arm64
   - enterprise-amazon2023-arm64-lto
   - enterprise-debian11-64
+  - enterprise-debian12-64
   - enterprise-linux-64-amazon-ami
   - enterprise-macos
   - enterprise-macos-arm64
@@ -364,7 +365,9 @@ variables:
   - enterprise-amazon2023
   - enterprise-amazon2023-arm64
   - debian11
+  - debian12
   - enterprise-debian11-64
+  - enterprise-debian12-64
   - rhel70
   - rhel76_compile_rhel70
   - enterprise-rhel-70-64-bit
