--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -297,6 +297,8 @@ last-continuous:
     ticket: SERVER-71667
   - test_file: jstests/sharding/drop_collection.js
     ticket: SERVER-71689
+  - test_file: jstests/sharding/index_and_collection_option_propagation.js
+    ticket: SERVER-71819
   - test_file: jstests/sharding/query/collation_targeting_inherited.js
     ticket: SERVER-72224
   - test_file: jstests/core/clustered/clustered_collection_collation.js
@@ -748,6 +750,8 @@ last-lts:
     ticket: SERVER-71667
   - test_file: jstests/sharding/drop_collection.js
     ticket: SERVER-71689
+  - test_file: jstests/sharding/index_and_collection_option_propagation.js
+    ticket: SERVER-71819
   - test_file: jstests/sharding/query/collation_targeting_inherited.js
     ticket: SERVER-72224
   - test_file: jstests/core/clustered/clustered_collection_collation.js
