SERVER-81985 Enforce _flushRoutingTableCacheUpdates only on collections
(cherry picked from commit 613bffe276f98758508dea8e279a9f3a5f99164c)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -419,6 +419,8 @@ last-continuous:
     ticket: SERVER-77506
   - test_file: jstests/sharding/move_chunk_basic.js
     ticket: SERVER-81201
+  - test_file: jstests/sharding/flushRoutingTableCacheUpdates_enforced_on_collections.js
+    ticket: SERVER-81985
   suites: null
 last-lts:
   all:
@@ -884,4 +886,6 @@ last-lts:
     ticket: SERVER-77506
   - test_file: jstests/sharding/move_chunk_basic.js
     ticket: SERVER-81201
+  - test_file: jstests/sharding/flushRoutingTableCacheUpdates_enforced_on_collections.js
+    ticket: SERVER-81985
   suites: null
