--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -296,6 +296,7 @@ pipelineEnv.Library(
         'document_source_internal_inhibit_optimization.cpp',
         'document_source_internal_shard_filter.cpp',
         'document_source_internal_shardserver_info.cpp',
+        'document_source_internal_shred_documents.cpp',
         'document_source_internal_split_pipeline.cpp',
         'document_source_internal_unpack_bucket.cpp',
         'document_source_limit.cpp',
