SERVER-81396 Fix compile_variant expansion causing S3 path conflicts for IBM variants
(cherry picked from commit ea9f2696a9e22cb95d414b114e811ecfcde048dd)

--- a/etc/evergreen_yml_components/variants/ibm.yml
+++ b/etc/evergreen_yml_components/variants/ibm.yml
@@ -78,6 +78,7 @@ buildvariants:
       -j$(echo "$(grep -c processor /proc/cpuinfo)/2" | bc)
       --variables-files=etc/scons/mongodbtoolchain_stable_gcc.vars
       --use-diagnostic-latches=off
+    compile_variant: enterprise-rhel-81-ppc64le-shared
   tasks:
   - name: compile_test_and_package_serial_TG
     distros:
