--- a/src/mongo/db/commands/SConscript
+++ b/src/mongo/db/commands/SConscript
@@ -351,7 +351,7 @@ env.Library(
         'current_op.cpp',
         'dbcommands.cpp',
         'distinct.cpp',
-        'drop_indexes_cmd.cpp',
+        'drop_indexes.cpp',
         'explain_cmd.cpp',
         'find_and_modify.cpp',
         'find_cmd.cpp',
