SERVER-82555 Use shallow clones for performance tests

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -170,6 +170,7 @@ functions:
     - command: git.get_project
       params:
         directory: *src_dir
+        clone_depth: 1000
         revisions:
           dsi: ${dsi_rev}
           genny: ${genny_rev}
@@ -509,6 +510,7 @@ functions:
     - command: git.get_project
       params:
         directory: *src_dir
+        clone_depth: 1000
         revisions:
           dsi: ${dsi_rev}
           genny: ${genny_rev}
