--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -2821,10 +2821,10 @@ buildvariants:
       - name: schedule_patch_auto_tasks
       - name: schedule_variant_auto_tasks
 
-  # Template below used to create an anchor for linux microbenchmarks standalone arm without the high-value-workload cron override that would transfer to any variant that uses this
+
   - &linux-microbenchmarks-standalone-arm
-    name: linux-microbenchmarks-standalone-arm-template
-    display_name: Linux Microbenchmarks Standalone Template (Don't Use)
+    name: linux-microbenchmarks-standalone-arm.2023-01
+    display_name: MicroBenchmarks Arm Standalone inMemory.2023-01
     # TODO SERVER-74399 Reduce frequency back to baseline.
     # cron: "0 0 * * 0,2,3,4,5"  # Run it every day except Saturday and Monday.
     cron: &linux-microbench-cron "0 0 * * *"  # Everyday at 00:00
@@ -2844,40 +2844,6 @@ buildvariants:
     run_on:
     - "rhel70-perf-microbenchmarks"
     depends_on: *_compile_amazon_linux2_arm64
-    tasks:
-    - name: big_collection
-    - name: genny_scale_InsertRemove
-    - name: genny_execution_UserAcquisition
-    - name: aggregation_read_commands
-    - name: aggregation_read_commands_large_dataset
-    - name: agg-query-comparison_read_commands
-    - name: query_read_commands
-    - name: query_read_commands_large_dataset
-    - name: views-aggregation
-    - name: views-query
-    - name: where_read_commands
-    - name: update_read_commands
-    - name: insert_read_commands
-    - name: wildcard-index-read_read_commands
-    - name: wildcard-index-write_read_commands
-    - name: geo_read_commands
-    - name: misc_read_commands
-    - name: misc_custom_filter_default_read_commands
-    - name: misc_custom_filter_slow_or_sample_read_commands
-    - name: misc_custom_filter_complex_read_commands
-    - name: misc_custom_filter_whole_doc_read_commands
-    - name: misc_slowms_everything_read_commands
-    - name: singleThreaded_read_commands
-    - name: pipeline-updates
-    - name: javascript
-    - name: compound_wildcard_index_write_commands
-    - name: compound_wildcard_index_read_commands
-
-  - <<: *linux-microbenchmarks-standalone-arm
-    name: linux-microbenchmarks-standalone-arm.2023-01
-    display_name: MicroBenchmarks Arm Standalone inMemory.2023-01
-    modules: *modules
-    expansions: *standalone-arm-expansions
     tasks:
     - name: big_collection
     - name: genny_scale_InsertRemove
@@ -2944,6 +2910,35 @@ buildvariants:
     expansions:
       <<: *standalone-arm-expansions
       mongodb_setup: mongo-perf-standalone-classic-query-engine.2023-02
+    tasks: &mirobenchmarks-all-feature-flags-tasks
+    - name: big_collection
+    - name: genny_scale_InsertRemove
+    - name: genny_execution_UserAcquisition
+    - name: aggregation_read_commands
+    - name: aggregation_read_commands_large_dataset
+    - name: agg-query-comparison_read_commands
+      cron: *linux-microbench-cron # *linux-microbenchmarks-standalone-arm contains high-value cron for this task. resetting to correct cron
+    - name: query_read_commands
+    - name: query_read_commands_large_dataset
+    - name: views-aggregation
+    - name: views-query
+    - name: where_read_commands
+    - name: update_read_commands
+    - name: insert_read_commands
+    - name: wildcard-index-read_read_commands
+    - name: wildcard-index-write_read_commands
+    - name: geo_read_commands
+    - name: misc_read_commands
+    - name: misc_custom_filter_default_read_commands
+    - name: misc_custom_filter_slow_or_sample_read_commands
+    - name: misc_custom_filter_complex_read_commands
+    - name: misc_custom_filter_whole_doc_read_commands
+    - name: misc_slowms_everything_read_commands
+    - name: singleThreaded_read_commands
+    - name: pipeline-updates
+    - name: javascript
+    - name: compound_wildcard_index_write_commands
+    - name: compound_wildcard_index_read_commands
     # yaml does not nicely merge arrays, so DO NOT ADD INDIVIDUAL TASKS HERE.
     # Add tasks to the anchor that this variant references
     # If diverging from that list, add the entire list of desired tasks here
@@ -2955,6 +2950,35 @@ buildvariants:
     expansions:
       <<: *standalone-arm-expansions
       mongodb_setup: mongo-perf-standalone-sbe.2023-02
+    tasks: &mirobenchmarks-all-feature-flags-tasks
+    - name: big_collection
+    - name: genny_scale_InsertRemove
+    - name: genny_execution_UserAcquisition
+    - name: aggregation_read_commands
+    - name: aggregation_read_commands_large_dataset
+    - name: agg-query-comparison_read_commands
+      cron: *linux-microbench-cron # *linux-microbenchmarks-standalone-arm contains high-value cron for this task. resetting to correct cron
+    - name: query_read_commands
+    - name: query_read_commands_large_dataset
+    - name: views-aggregation
+    - name: views-query
+    - name: where_read_commands
+    - name: update_read_commands
+    - name: insert_read_commands
+    - name: wildcard-index-read_read_commands
+    - name: wildcard-index-write_read_commands
+    - name: geo_read_commands
+    - name: misc_read_commands
+    - name: misc_custom_filter_default_read_commands
+    - name: misc_custom_filter_slow_or_sample_read_commands
+    - name: misc_custom_filter_complex_read_commands
+    - name: misc_custom_filter_whole_doc_read_commands
+    - name: misc_slowms_everything_read_commands
+    - name: singleThreaded_read_commands
+    - name: pipeline-updates
+    - name: javascript
+    - name: compound_wildcard_index_write_commands
+    - name: compound_wildcard_index_read_commands
     # yaml does not nicely merge arrays, so DO NOT ADD INDIVIDUAL TASKS HERE.
     # Add tasks to the anchor that this variant references
     # If diverging from that list, add the entire list of desired tasks here
@@ -2971,6 +2995,35 @@ buildvariants:
     run_on:
     - "rhel70-perf-microbenchmarks"
     depends_on: *_compile_amazon2
+    tasks:
+      - name: big_collection
+      - name: genny_scale_InsertRemove
+      - name: genny_execution_UserAcquisition
+      - name: aggregation_read_commands
+      - name: aggregation_read_commands_large_dataset
+      - name: agg-query-comparison_read_commands
+        cron: "0 0 * * 0,2,3,4,5" # *linux-microbenchmarks-standalone-arm contains high-value cron for this task. resetting to correct cron
+      - name: query_read_commands
+      - name: query_read_commands_large_dataset
+      - name: views-aggregation
+      - name: views-query
+      - name: where_read_commands
+      - name: update_read_commands
+      - name: insert_read_commands
+      - name: wildcard-index-read_read_commands
+      - name: wildcard-index-write_read_commands
+      - name: geo_read_commands
+      - name: misc_read_commands
+      - name: misc_custom_filter_default_read_commands
+      - name: misc_custom_filter_slow_or_sample_read_commands
+      - name: misc_custom_filter_complex_read_commands
+      - name: misc_custom_filter_whole_doc_read_commands
+      - name: misc_slowms_everything_read_commands
+      - name: singleThreaded_read_commands
+      - name: pipeline-updates
+      - name: javascript
+      - name: compound_wildcard_index_write_commands
+      - name: compound_wildcard_index_read_commands
     # yaml does not nicely merge arrays, so DO NOT ADD INDIVIDUAL TASKS HERE.
     # Add tasks to the anchor that this variant references
     # If diverging from that list, add the entire list of desired tasks here
