SERVER-82984 Fix nModified value for queryable encrypted upserts
(cherry picked from commit d0c3d8916ee8a0bf5aa151cba1413cc442e30adf)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -423,6 +423,10 @@ last-continuous:
     ticket: SERVER-81985
   - test_file: jstests/sharding/query/merge_nondefault_read_concern.js
     ticket: SERVER-69244
+  - test_file: src/mongo/db/modules/enterprise/jstests/fle2/basic_update.js
+    ticket: SERVER-82984
+  - test_file: src/mongo/db/modules/enterprise/jstests/fle2/basic_replace.js
+    ticket: SERVER-82984
   suites: null
 last-lts:
   all:
@@ -892,4 +896,8 @@ last-lts:
     ticket: SERVER-81985
   - test_file: jstests/sharding/query/merge_nondefault_read_concern.js
     ticket: SERVER-69244
+  - test_file: src/mongo/db/modules/enterprise/jstests/fle2/basic_update.js
+    ticket: SERVER-82984
+  - test_file: src/mongo/db/modules/enterprise/jstests/fle2/basic_replace.js
+    ticket: SERVER-82984
   suites: null
